# METIS_DRLD

./: .gitignore  00-Titlepage.tex  02-Instrument_Modes.tex  03-Instrument_Data_Description.tex  05_0-Data_Processing_Overview.tex  06_0-Algorithms.tex  06_0-Pipeline_Recipes.tex  07_0-Algorithms.tex  07_0-Pipeline_Recipes.tex  08_0-DRL-Functions.tex  09_0-DRL-Data-Structures.tex  10_0-HDRL_algorithms.tex  11_0-critical_algorithms.tex  12_0-QC_parameters.tex  13_0-Developmentplan.tex  13_1-Release_Schedule.tex  ADI_QC_items.tex  ADI_data_items.tex  ADI_drl_functions.tex  APP_dpr_keywords.tex  Algorithms_APP_IMG.tex  Algorithms_APP_LSS.tex  Algorithms_LSS.tex  Algorithms_SPECTRO.tex  Algorithms_misc.tex  App01_Product_files.tex  App02_FITS_keywords.tex  App03_AtmoTrans.tex  App04_molecfit_summary.tex  CalDB_data_items.tex  CritAlgo_ADI.tex  CritAlgo_IFUdist.tex  CritAlgo_LSS_PyReduce.tex  CritAlgo_Persistence.tex  Detector_drl_functions.tex  IFU_drl_functions.tex  IMG_data_items.tex  IMG_data_structures.tex  IMG_drl_functions.tex  JuPyter_header.tex  (+35 more)
SPIE_paper/: main.tex  report.bib
figures/: CritAlgo_LSS_PyReduce.tex
skeleton/: generate_recipe.py  metis_wkf.py  pycpl_recipes_skeleton.py
tikz/: IFU_assomap_tikz.tex  IMG_LM_assomap_tikz.tex  IMG_N_assomap_tikz.tex  Makefile  PSF_IFU_slices.reg  all.tex  assomap_common.tex  assomap_common_imports.tex  assomap_common_styles.tex  black_style.tex  metis_cal_chophome.tex  metis_det_dark.tex  metis_det_lingain.tex  metis_ifu_adi_cgrph.tex  metis_ifu_calibrate.tex  metis_ifu_distortion.tex  metis_ifu_postprocess.tex  (+32 more)
(+217 files in other folders)
